# SoftPosit_for_P2ILF

./: .gitignore  CMakeLists.txt  README.md  SoftPosit_for_P2ILF.kdev4  curve_generator.cpp  demo.cpp  init_pose1  init_pose2  init_pose3  init_pose4  init_pose5  main.cpp  read_image.cpp  read_pcd.cpp  toy.pcd
.kdev4/: SoftPosit_for_P2ILF.kdev4
softposit/: softposit.cpp  softposit.hpp
toy_data/: registration.json
toy_data/1/: registration.json
toy_data/2/: registration.json
toy_data/3/: registration.json
toy_data/4/: registration.json
try_data/: 09.mat  CameraParameters  Liver_sect.ply  Tpr.txt  Tus.txt
